--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <!--<link href="https://fonts.googleapis.com/css?family=Do+Hyeon" rel="stylesheet">-->
     <!--<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
-    <script src="script.js"></script>
 </head>
 
 <style>
@@ -134,7 +133,7 @@
         }
     }
     
-    @media screen and (max-width: 450px) {
+    @media screen and (max-width: 480px) {
         .burger-nav {
             height: 40px;
             background: rgb(255, 145, 0);
@@ -183,6 +182,31 @@
 
 
 </style>
+
+
+<script>
+
+    document.addEventListener("DOMContentLoaded", () => {
+        const listItems = Array.from(document.querySelectorAll("nav li"));
+        const divContainer = document.getElementsByClassName("burger-nav")[0];
+        const ul = document.getElementsByClassName("burger-list")[0];
+        const mainBannerDiv = document.getElementsByClassName("main-banner")[0];
+
+        listItems.forEach( (listItem) => {
+            // document.createElement("li");
+            const currentItem = document.createElement('li');
+            currentItem.innerHTML = listItem.innerHTML;
+            ul.appendChild(currentItem);
+
+        });
+
+        divContainer.addEventListener("click", () => {
+            ul.classList.toggle("open");
+            mainBannerDiv.classList.toggle("open");
+        })
+
+    });
+</script>
 
 <body>
     <header>
